# pers

./: .gitignore  LICENSE  README.md  curl.sh  pers.cabal  stack.yaml
app/: CommonTest.hs  ListTest.hs  Main.hs  Main1.hs  Main2.hs  NamedRecordData.hs  NamedRecordTest.hs  Server.hs  Tab1.hs  Tab2.hs  Tab3.hs  TreeTest.hs  TreeTypes.hs
src/: DDL.hs  DDL2.hs  DML.hs  DML2.hs  FieldValue.hs  Fields.hs  FromMap.hs  Lib.hs  List.hs  NRTH.hs  NamedBTree.hs  NamedBTree2.hs  NamedEntity.hs  NamedRecord.hs  NamedRecord2.hs  NamedRecord3.hs  NamedRecord4.hs  NamedRecord5.hs  NamedRecord6.hs  NamedValue.hs  PersistRec.hs  SplitRec.hs  Sqlite.hs  Sqlite2.hs
src/Pers/: TH.hs  Types.hs  Types2.hs
src/Pers/Database/: DDL.hs  DDL2.hs  DML.hs  DML2.hs
src/Pers/Database/Sqlite/: Sqlite.hs  Sqlite2.hs
src/Pers/Servant/: Input.hs  Lucid.hs  Servant.hs  Simple.hs
