name:                pers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/odr/pers#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           BSD3
category:            none
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fields
                        , NamedBTree
                        , NamedBTree2
                        , SplitRec
                        , List
                        , NamedRecord
  default-extensions:  TypeOperators
                        , DataKinds
  build-depends:       base >= 4.7 && < 5
                        , ghc-prim >= 0.4
                        , record >= 0.4
                        , lens
  default-language:    Haskell2010

executable pers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:        TreeTest
                        , ListTest
                        , NamedRecordTest

  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -fcontext-stack=200
  default-extensions:  TypeOperators
                       , DataKinds
  build-depends:       base
                     , pers
  default-language:    Haskell2010

test-suite pers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fcontext-stack=200
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/pers
